Fix screen overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 a {
